--- a/Flutterasia/Info.plist
+++ b/Flutterasia/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This app will use camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This photo is use for profile picture</string>
 	<key>CFBundleDevelopmentRegion</key>
